objects/G2Crowd__G2_Visiting_Organization__c.object
<CustomObject>
    <fields>
        <fullName>G2Crowd__Account_Generated__c</fullName>
        <formula>((G2Crowd__Account__r.CreatedDate - CreatedDate)*24*60) &lt;= 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>G2_Visitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Alexa_Global_Rank__c</fullName>
        <label>Alexa Global Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Alexa_US_Rank__c</fullName>
        <label>Alexa US Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Auto_Generated__c</fullName>
        <formula>CONTAINS(Name, &apos;(Auto Generated)&apos;)</formula>
        <label>Auto Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G2Crowd__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Company_Type__c</fullName>
        <label>Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Crunchbase__c</fullName>
        <label>Crunchbase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Description__c</fullName>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Difference_In_Visit_Time__c</fullName>
        <formula>(G2Crowd__First_Event_Time__c - G2Crowd__Account__r.CreatedDate)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference In Visit Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Domain_Aliases__c</fullName>
        <label>Domain Aliases</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Email_Provider__c</fullName>
        <label>Email Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Employees_Range__c</fullName>
        <label>Employees Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Employees__c</fullName>
        <label>Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Facebook__c</fullName>
        <label>Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__First_Event_Time__c</fullName>
        <label>First Event Time</label>
        <summarizedField>G2Crowd__G2_Event__c.G2Crowd__Time__c</summarizedField>
        <summaryForeignKey>G2Crowd__G2_Event__c.G2Crowd__G2_Visitor__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Subscribed_Organization_ID__c</fullName>
        <externalId>true</externalId>
        <label>G2 Subscribed Organization ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>G2Crowd__Industry_Group__c</fullName>
        <label>Industry Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Lead_Ids__c</fullName>
        <label>Lead Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>G2 Visiting Organizations</relationshipLabel>
        <relationshipName>G2_Visiting_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Logo__c</fullName>
        <label>Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Most_Recent_Event__c</fullName>
        <label>Most Recent Event</label>
        <summarizedField>G2Crowd__G2_Event__c.G2Crowd__Time__c</summarizedField>
        <summaryForeignKey>G2Crowd__G2_Event__c.G2Crowd__G2_Visitor__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>G2 Visiting Organizations</relationshipLabel>
        <relationshipName>G2_Visiting_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Remote_Organization_ID__c</fullName>
        <externalId>true</externalId>
        <label>Remote Organization ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>G2Crowd__Revenue__c</fullName>
        <label>Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Sector__c</fullName>
        <label>Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Site_Author__c</fullName>
        <label>Site Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Site_H1__c</fullName>
        <label>Site H1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Site_Meta__c</fullName>
        <label>Site Meta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Site_Title__c</fullName>
        <label>Site Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__State_Code__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Street_Number__c</fullName>
        <label>Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Tags__c</fullName>
        <label>Tags</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Technology__c</fullName>
        <label>Technology</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Time_Between_First_Visit__c</fullName>
        <formula>IF ((G2Crowd__Account__r.CreatedDate - G2Crowd__First_Event_Time__c) &gt; 0, /*check to see if D2subD1 is greater than zero*/

TEXT(FLOOR( (G2Crowd__Account__r.CreatedDate - G2Crowd__First_Event_Time__c))) &amp; &quot; days &quot; &amp; /*returns the number of days in D2subD1*/

TEXT(FLOOR( 24 * ((G2Crowd__Account__r.CreatedDate - G2Crowd__First_Event_Time__c) - FLOOR((G2Crowd__Account__r.CreatedDate - G2Crowd__First_Event_Time__c)) ))) &amp; &quot; hours &quot; &amp; /*returns the remaining number of hours in D2subD1*/

TEXT(ROUND(60 * (ROUND( 24 * ( (G2Crowd__Account__r.CreatedDate - G2Crowd__First_Event_Time__c) - FLOOR((G2Crowd__Account__r.CreatedDate - G2Crowd__First_Event_Time__c)) ),8) - FLOOR(ROUND(24 * ((G2Crowd__Account__r.CreatedDate - G2Crowd__First_Event_Time__c) - FLOOR((G2Crowd__Account__r.CreatedDate - G2Crowd__First_Event_Time__c)) ),8)) ),0)) &amp; &quot; mins&quot; /*returns the remaining number of minutes in D2subD1*/

, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Between First Visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Twitter_Bio__c</fullName>
        <label>Twitter Bio</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Twitter_Id__c</fullName>
        <label>Twitter Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__UTC_Offset__c</fullName>
        <label>UTC Offset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Year_Founded__c</fullName>
        <label>Year Founded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>G2 Visiting Organization</label>
    <listViews>
        <fullName>G2Crowd__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Visiting Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>